--- a/AncientEgypt/Application/Initialization/Info.plist
+++ b/AncientEgypt/Application/Initialization/Info.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>Sigmar-Regular.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
